# NexRemote

./: .gitignore  LICENSE  README.md  config.json  main.py  pubspec.yaml  pyproject.toml
.github/workflows/: ci.yml
client/: pubspec.yaml
client/NexRemote/: settings.gradle.kts
client/lib/: main.dart
client/test/: widget_test.dart
client/web/: manifest.json
client/windows/: CMakeLists.txt
docs/legal/: NEXREMOTE_PRIVACY_POLICY.md  (+2 more)
file/: transfer.py
input/: gamepad_controller.py  keyboard_controller.py  mouse_controller.py
media/: player_controller.py
mobile_app/: pubspec.yaml
network/: discovery.py  server.py
nexremote/: README.md  pubspec.yaml
screen/: capture.py
scripts/: build.ps1  dev.ps1
shared/: protocol.proto
system/: process_manager.py
ui/: main_window.py  settings_dialog.py
utils/: config.py  logger.py
windows_app/: nexremote.spec
windows_app/src/: .gitignore  main.py  pyproject.toml
windows_app/src/assets/legal/: PRIVACY.md  TERMS.md
windows_app/src/core/: __init__.py  certificate_manager.py  connection_manager.py  discovery.py  nat_traversal.py  server.py  server_thread.py  usb_detector.py
windows_app/src/input/: __init__.py  input_validator.py  media_controller.py  virtual_gamepad.py  virtual_keyboard.py  virtual_mouse.py
windows_app/src/security/: __init__.py  audit_logger.py  authentication.py  encryption.py  firewall_config.py
windows_app/src/streaming/: __init__.py  audio_capture.py  camera_streamer.py  screen_capture.py  virtual_camera.py
windows_app/src/ui/: __init__.py  connection_dialog.py  file_explorer.py  main_window.py  settings_dialog.py  task_manager.py  terms_dialog.py  tray_icon.py
windows_app/src/utils/: __init__.py  config.py  elevate.py  elevated_ops.py  logger.py  paths.py  protocol.py  vigem_setup.py
(+255 files in other folders)
