[project]
name = "nexremote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "mss>=10.1.0",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "psutil>=7.2.1",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyqt6>=6.10.2",
    "vgamepad>=0.1.0",
]
