[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioice>=0.10.2",
    "aiortc>=1.14.0",
    "cryptography>=46.0.4",
    "loguru>=0.7.3",
    "mss>=10.1.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "protobuf>=6.33.5",
    "psutil>=7.2.2",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pyopenssl>=25.3.0",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.2",
    "pywin32>=311; platform_system=='Windows'",
    "vgamepad>=0.1.0",
    "websockets>=16.0",
]
